--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,19 +1,131 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
-        {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
-        {% endblock %}
+<!doctype html>
+<html lang="fr">
 
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <!-- Bootstrap icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <!-- Our custom CSS -->
+    <link rel="stylesheet" href="{{ asset('css/oflix.css') }}">
+    <!-- favicon -->
+    <link rel="shortcut icon" href="{{ asset('favicon.png') }}" type="image/x-icon">
+
+    <title>{% block title %}{% endblock %} - O'flix</title>
+</head>
+
+<body>
+
+    <!-- Nav -->
+
+    {# CSS Netflix #}
+    {# Si l'attribut de session netflix_theme vaut true ou n'existe (et donc vaut true par défaut) #}
+    {% if app.session.get('netflix_theme', true) == true %}
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    {% else %}
+    {# CSS Allociné #}
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #fecc00;">
+    {% endif %}
+
+        <div class="container-fluid">
+            <a href="{{ path('home') }}" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none header-logo">
+                <img src="{{ asset('favicon.png') }}" height="24" alt="Logo O'flix">
+                <span class="header-logo__title">O'flix</span>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="{{ path('home') }}">Accueil</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('movie_list') }}"><i class="bi bi-film"></i> Films, séries TV</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('favorites') }}"><i class="bi bi-bookmark"></i> Ma liste</a>
+                    </li>
+                </ul>
+
+                {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                {# User connecté #}
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown">
+                            <span>{{ app.user.email }}</span>
+                            <i class="bi bi-person-square"></i>
+                        </a>
+                        <ul class="dropdown-menu">
+
+                            {% if is_granted('ROLE_ADMIN') %}
+                            <li><h6 class="dropdown-header">Administrateur</h6></li>
+                            
+                            {% elseif is_granted('ROLE_MANAGER') %}
+                            <li><h6 class="dropdown-header">Manager</h6></li>
+                            
+                            {% elseif is_granted('ROLE_USER')%}
+                            <li><h6 class="dropdown-header">Membre</h6></li>
+                            
+                            {% endif %}
+
+                            <li><a class="dropdown-item" href="#">Profil</a></li>
+
+                            {# Accès à partir de ROLE_MANAGER #}
+                            {% if is_granted('ROLE_MANAGER') %}
+                            <li><a class="dropdown-item" href="{{ path('back_movie_index') }}">Backoffice</a></li>
+                            {% endif %}
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="{{ path('logout') }}">Déconnexion</a></li>
+                        </ul>
+                    </li>
+                </ul>
+                {% else %}
+                {# User non connecté #}
+                <a href="{{ path('login') }}" class="btn btn-danger me-2">Connexion</a>
+                {% endif %}
+
+                <form class="d-flex" action="list.html">
+                    <input class="form-control form-control-sm me-2" name="search" type="search" placeholder="Rechercher...">
+                    <button class="btn btn-outline-danger" type="submit"><i class="bi bi-search"></i></button>
+                </form>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Sous-nav (back-office) -->
+    {% block subnav %}{% endblock %}
+
+    <!-- main -->
+    {% block body %}{% block body_back %}{% endblock %}{% endblock %}
+
+    <!-- footer -->
+    <footer class="container-fluid py-4 border-top text-center">
+        <span class="text-muted">O'flix made with &hearts; at O'clock !
+            <br><small>Thème :<a href="{{ path('theme_toggle') }}" class="link-secondary text-decoration-none">
+
+                {% if app.session.get('netflix_theme', true) == true %}
+                <i class="bi bi-toggle-on mx-1"></i>Netflix
+                {% else %}
+                <i class="bi bi-toggle-off mx-1"></i>Allociné
+                {% endif %}
+
+            </a></small></a>
+        </span>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
