--- a/templates/back/district/index.html.twig
+++ b/templates/back/district/index.html.twig
@@ -1,20 +1,39 @@
-{% extends 'base.html.twig' %}
+{% extends 'back/base.html.twig' %}
 
-{% block title %}Hello DistrictController!{% endblock %}
+{% block title %}Liste des films{% endblock %}
 
-{% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+{% block body_back %}
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <h1>Liste des films</h1>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/var/www/html/Restokyo/projet-restokyo-back/src/Controller/Back/DistrictController.php'|file_link(0) }}">src/Controller/Back/DistrictController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/var/www/html/Restokyo/projet-restokyo-back/templates/back/district/index.html.twig'|file_link(0) }}">templates/back/district/index.html.twig</a></code></li>
-    </ul>
-</div>
+    <a href="{{ path('back_establishment_new') }}" class="btn btn-primary mb-2">Ajouter un film</a>
+
+    {{ include('_flash_messages.html.twig') }}
+
+    <table class="table table-striped table-hover">
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>Nom</th>
+                <th>actions</th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for district in districts %}
+            <tr>
+                <td>{{ district.id }}</td>
+                <td>{{ district.name }}</td>
+                <td>
+                    <a href="{{ path('back_establishment_show', {'id': district.id}) }}" class="btn btn-sm btn-primary">show</a>
+                    <a href="{{ path('back_establishment_edit', {'id': district.id}) }}" class="btn btn-sm btn-success">edit</a>
+                </td>
+            </tr>
+        {% else %}
+            <tr>
+                <td colspan="10">no records found</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+    
 {% endblock %}
