--- a/templates/back/establishment/edit.html.twig
+++ b/templates/back/establishment/edit.html.twig
@@ -1,13 +1,13 @@
 {% extends 'back/base_back.html.twig' %}
 
-{% block title %}Edit Movie{% endblock %}
+{% block title %}Edit establishment{% endblock %}
 
 {% block body_back %}
-    <h1>Edit Movie</h1>
+    <h1>Edit establishment</h1>
 
-    {{ include('back/movie/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('back/establishment/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('back_movie_index') }}" class="btn btn-primary">back to list</a>
+    <a href="{{ path('back_establishment_index') }}" class="btn btn-primary">back to list</a>
 
-    {{ include('back/movie/_delete_form.html.twig') }}
+    {{ include('back/establishment/_delete_form.html.twig') }}
 {% endblock %}
