--- a/templates/back/establishment/index.html.twig
+++ b/templates/back/establishment/index.html.twig
@@ -16,7 +16,8 @@
                 <th>Id</th>
                 <th>Nom</th>
                 <th>Photo</th>
-                <th>Type</th>
+                <th> <a href="{{ path('back_establishment_listByType') }}">Type</a></th>
+                <th><a href="{{ path('back_establishment_listByDistrict') }}">Quartier</a></th>
                 <th>Note</th>
                 <th>actions</th>
             </tr>
@@ -28,6 +29,7 @@
                 <td>{{ establishment.name }}</td>
                 <td><img src="{{ establishment.poster }}" height="40"></td>
                 <td>{{ establishment.type }}</td>
+                <td>{{ establishment.district }}</td>
                 <td>{{ establishment.rating }}</td>
                 <td>
                     <a href="{{ path('back_establishment_show', {'id': establishment.id}) }}" class="btn btn-sm btn-primary">show</a>
