--- a/templates/back/establishment/edit.html.twig
+++ b/templates/back/establishment/edit.html.twig
@@ -1,4 +1,4 @@
-{% extends 'back/base_back.html.twig' %}
+{% extends 'back/menu.html.twig' %}
 
 {% block title %}Edit establishment{% endblock %}
 
