--- a/templates/back/establishment/index.html.twig
+++ b/templates/back/establishment/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'back/base_back.html.twig' %}
+{% extends 'back/menu.html.twig' %}
 
 {% block title %}Liste des films{% endblock %}
 
@@ -8,7 +8,7 @@
 
     <a href="{{ path('back_establishment_new') }}" class="btn btn-primary mb-2">Ajouter un film</a>
 
-    {{ include('_flash_messages.html.twig') }}
+    {# {{ include('_flash_messages.html.twig') }} #}
 
     <table class="table table-striped table-hover">
         <thead>
@@ -16,7 +16,7 @@
                 <th>Id</th>
                 <th>Nom</th>
                 <th>Photo</th>
-                <th> <a href="{{ path('back_establishment_listByType') }}">Type</a></th>
+                <th><a href="{{ path('back_establishment_listByType') }}">Type</a></th>
                 <th><a href="{{ path('back_establishment_listByDistrict') }}">Quartier</a></th>
                 <th>Note</th>
                 <th>actions</th>
