--- a/templates/back/establishment/index.html.twig
+++ b/templates/back/establishment/index.html.twig
@@ -16,8 +16,8 @@
                 <th>Id</th>
                 <th>Nom</th>
                 <th>Photo</th>
-                <th><a href="{{ path('back_establishment_listByType') }}">Type</a></th>
-                <th><a href="{{ path('back_establishment_listByDistrict') }}">Quartier</a></th>
+                 <th><a href="{# {{ path('back_establishment_listByType') }} #}">Type</a></th>
+                 <th><a href="{# {{ path('back_establishment_listByDistrict') }} #}">Quartier</a></th> 
                 <th>Note</th>
                 <th>actions</th>
             </tr>
@@ -27,7 +27,7 @@
             <tr>
                 <td>{{ establishment.id }}</td>
                 <td>{{ establishment.name }}</td>
-                <td><img src="{{ establishment.poster }}" height="40"></td>
+                <td><img src="{{ establishment.picture }}" height="40"></td>
                 <td>{{ establishment.type }}</td>
                 <td>{{ establishment.district }}</td>
                 <td>{{ establishment.rating }}</td>
