index dynamic ok

--- a/templates/back/establishment/index.html.twig
+++ b/templates/back/establishment/index.html.twig
@@ -16,7 +16,7 @@
                 <th>Id</th>
                 <th>Nom</th>
                 <th>Photo</th>
-                 <th><a href="{# {{ path('back_establishment_listByType') }} #}">Type</a></th>
+                 <th><a href="{{ path('back_establishment_orderByTypeASC') }}">Type</a></th>
                  <th><a href="{# {{ path('back_establishment_listByDistrict') }} #}">Quartier</a></th> 
                 <th>Note</th>
                 <th>actions</th>
@@ -28,7 +28,7 @@
                 <td>{{ establishment.id }}</td>
                 <td>{{ establishment.name }}</td>
                 <td><img src="{{ establishment.picture }}" height="40"></td>
-                <td>{{ establishment.type }}</td>
+                <td><a href="{{ path('back_establishment_listByType',{'type': establishment.type}) }}">{{ establishment.type }}</td>
                 <td>{{ establishment.district }}</td>
                 <td>{{ establishment.rating }}</td>
                 <td>
