--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,7 +12,7 @@
     <!-- Bootstrap icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 
-    <title>{% block title %}{% endblock %} - O'flix</title>
+    <title>{% block title %}{% endblock %} - ResTokyo</title>
 </head>
 
 <body>
