--- a/templates/back/district/index.html.twig
+++ b/templates/back/district/index.html.twig
@@ -1,14 +1,14 @@
 {% extends 'back/menu.html.twig' %}
 
-{% block title %}Liste des films{% endblock %}
+{% block title %}Liste des districts{% endblock %}
 
 {% block body_back %}
 
-    <h1>Liste des films</h1>
+    <h1>Liste des districts</h1>
 
-    <a href="{{ path('back_establishment_new') }}" class="btn btn-primary mb-2">Ajouter un film</a>
+    <a href="{{ path('back_district_new') }}" class="btn btn-primary mb-2">Ajouter un district</a>
 
-    {{ include('_flash_messages.html.twig') }}
+    {# {{ include('_flash_messages.html.twig') }} #}
 
     <table class="table table-striped table-hover">
         <thead>
@@ -24,8 +24,8 @@
                 <td>{{ district.id }}</td>
                 <td>{{ district.name }}</td>
                 <td>
-                    <a href="{{ path('back_establishment_show', {'id': district.id}) }}" class="btn btn-sm btn-primary">show</a>
-                    <a href="{{ path('back_establishment_edit', {'id': district.id}) }}" class="btn btn-sm btn-success">edit</a>
+                    <a href="{{ path('back_district_show', {'id': district.id}) }}" class="btn btn-sm btn-primary">show</a>
+                    <a href="{{ path('back_district_edit', {'id': district.id}) }}" class="btn btn-sm btn-success">edit</a>
                 </td>
             </tr>
         {% else %}
