--- a/templates/back/district/new.html.twig
+++ b/templates/back/district/new.html.twig
@@ -1,11 +1,11 @@
 {% extends 'back/menu.html.twig' %}
 
-{% block title %}New Movie{% endblock %}
+{% block title %}New District{% endblock %}
 
 {% block body_back %}
-    <h1>Create new Movie</h1>
+    <h1>Create new District</h1>
 
-    {{ include('back/movie/_form.html.twig') }}
+    {{ include('back/district/_form.html.twig') }}
 
-    <a href="{{ path('back_movie_index') }}">back to list</a>
+    <a href="{{ path('back_district_index') }}">back to list</a>
 {% endblock %}
