--- a/templates/back/user/index.html.twig
+++ b/templates/back/user/index.html.twig
@@ -1,20 +1,40 @@
-{% extends 'base.html.twig' %}
+{% extends 'back/menu.html.twig' %}
 
-{% block title %}Hello UserController!{% endblock %}
+{% block title %}User index{% endblock %}
 
-{% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+{% block body_back %}
+    <h1>User index</h1>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <a class="btn btn-primary" href="{{ path('back_user_new') }}">Ajouter un utilisateur</a>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/var/www/html/Restokyo/projet-restokyo-back/src/Controller/Back/UserController.php'|file_link(0) }}">src/Controller/Back/UserController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/var/www/html/Restokyo/projet-restokyo-back/templates/back/user/index.html.twig'|file_link(0) }}">templates/back/user/index.html.twig</a></code></li>
-    </ul>
-</div>
+    {# {{ include('_flash_messages.html.twig') }} #}
+    
+    <table class="table table-striped table-hover">
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>Email</th>
+                <th>Roles</th>
+                <th>actions</th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for user in users %}
+            <tr>
+                <td>{{ user.id }}</td>
+                <td>{{ user.email }}</td>
+                <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
+                <td>
+                    <a class="btn btn-primary btn-sm" href="{{ path('back_user_show', {'id': user.id}) }}">show</a>
+                    <a class="btn btn-success btn-sm" href="{{ path('back_user_edit', {'id': user.id}) }}">edit</a>
+                </td>
+            </tr>
+        {% else %}
+            <tr>
+                <td colspan="5">no records found</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+
 {% endblock %}
