--- a/templates/back/establishment/show.html.twig
+++ b/templates/back/establishment/show.html.twig
@@ -28,6 +28,10 @@
                 <th>Rating</th>
                 <td>{{ establishment.rating }}</td>
             </tr>
+            <tr>
+                <th>Opening days</th>
+                <td>{{ establishment.openingdays }}</td>
+            </tr>
         </tbody>
     </table>
 
