--- a/templates/back/menu.html.twig
+++ b/templates/back/menu.html.twig
@@ -9,7 +9,7 @@
         <a class="nav-link" href="{{ path('back_district_index') }}">Quartiers</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="{{ path('back_establishment_index') }}">Restaurents et Isakaya</a>
+        <a class="nav-link" href="{{ path('back_establishment_index') }}">Restaurants et Isakaya</a>
     </li>
     <li class="nav-item">
         <a class="nav-link" href="{{ path('back_user_index') }}">Utilisateurs</a>
