--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -4,6 +4,11 @@
 {# ... #}
 
 {% block body %}
+
+<div class="container">
+
+    <h1>Connexion Back-Office</h1>
+
     {% if error %}
         <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
@@ -20,4 +25,6 @@
 
         <button type="submit">login</button>
     </form>
+    
+</div>
 {% endblock %}
