--- a/templates/establishment/edit.html.twig
+++ b/templates/establishment/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('establishment/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('back_establishment_index') }}" class="btn btn-primary">back to list</a>
+    <a href="{{ path('back_establishment_index') }}" class="btn btn-primary">Retour à la liste</a>
 
     {{ include('back/establishment/_delete_form.html.twig') }}
 {% endblock %}
