delete post put pour api user ok

--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -70,7 +70,7 @@
     </div>
     <div class="col-sm-4">
         <div class="card h-100">
-            <img src="../images/user.png" class="card-img-top" alt="...">
+            <img src="../images/user.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Utilisateurs</h5>
                 <p class="card-text">Interface de gestion des utilisateurs.</p>
