--- a/templates/establishment/index.html.twig
+++ b/templates/establishment/index.html.twig
@@ -18,7 +18,7 @@
                 <th>Photo</th>
                  <th><a href="{{ path('back_establishment_orderByTypeASC') }}">Type</a></th>
                  <th><a href="{{ path('back_establishment_orderByDistrictASC') }}">Quartier</a></th> 
-                <th>Site web</th>
+                
                 <th>Tags</th>
                 <th>Note</th>
                 <th>Statut</th>
@@ -33,9 +33,9 @@
                 <td><img src="{{ establishment.picture }}" height="40"></td>
                 <td><a href="{{ path('back_establishment_listByType',{'type': establishment.type}) }}">{{ establishment.type }}</td>
                 <td><a href="{{ path('back_establishment_listByDistrict',{'district': establishment.district.id}) }}">{{ establishment.district.name }}</td>
-                {# {% for tag in establishment.tags %}
-                    <td>{{ tag }}</td>
-                {% endfor %} #}
+                <td>{{ establishment.tags.name }}</td>
+                  
+                
                 
                 <td>{{ establishment.phone }}</td>
                 <td>{{ establishment.rating }}</td>
