--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -42,7 +42,7 @@
             {% if is_granted('IS_AUTHENTICATED_FULLY') %}
             {% if is_granted('ROLE_ADMIN') %}
                 <li class="nav-item">
-                    <span class="nav-link disabled">{{ app.user.username }}</span>
+                    <span class="nav-link disabled">{{ app.user.pseudo }}</span>
                 </li>
             {% endif %}
             <li class="nav-item">
