--- a/templates/establishment/index.html.twig
+++ b/templates/establishment/index.html.twig
@@ -7,6 +7,8 @@
     <h1>Liste des établissements</h1>
 
     <a href="{{ path('back_establishment_new') }}" class="btn btn-warning mb-2">Ajouter un établissement</a>
+    <a href="{{ path('back_establishment_listByStatus',{'status': 0}) }}" class="btn btn-warning mb-2">Liste des établissements à valider</a>
+
 
     {# {{ include('_flash_messages.html.twig') }} #}
 
@@ -15,13 +17,13 @@
             <tr>
                 <th>Id</th>
                 <th>Nom</th>
-                <th>Photo</th>
+                <th>Poster</th>
                  <th><a href="{{ path('back_establishment_orderByTypeASC') }}">Type</a></th>
                  <th><a href="{{ path('back_establishment_orderByDistrictASC') }}">Quartier</a></th> 
                 
                 <th>Tags</th>
                 <th>Note</th>
-                <th>Statut</th>
+                <th><a href="{{ path('back_establishment_orderByStatusASC') }}">Statut</a></th>
                 <th>actions</th>
             </tr>
         </thead>
@@ -30,16 +32,14 @@
             <tr>
                 <td>{{ establishment.id }}</td>
                 <td><a href="{{ path('back_establishment_show', {'id': establishment.id}) }}">{{ establishment.name }}</a></td>
-                <td><img src="{{ establishment.picture }}" height="40"></td>
+                <td><img src="{{ establishment.poster }}" height="40"></td>
                 <td><a href="{{ path('back_establishment_listByType',{'type': establishment.type}) }}">{{ establishment.type }}</td>
                 <td><a href="{{ path('back_establishment_listByDistrict',{'district': establishment.district.id}) }}">{{ establishment.district.name }}</td>
-                <td>{{ establishment.tags.name }}</td>
-                  
-                
-                
-                <td>{{ establishment.phone }}</td>
+                <td>{% for tag in establishment.tags %}
+                    "{{ tag.name }}"
+                {% endfor %}</td>
                 <td>{{ establishment.rating }}</td>
-                <td>{{ establishment.status }}</td>
+                <td><a href="{{ path('back_establishment_listByStatus',{'status': establishment.status}) }}">{{ establishment.status }}</td>
                 <td>
                     <a href="{{ path('back_establishment_show', {'id': establishment.id}) }}" class="btn btn-sm btn-primary">show</a>
                     <a href="{{ path('back_establishment_edit', {'id': establishment.id}) }}" class="btn btn-sm btn-success">edit</a>
