--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{user.username}}{% endblock %}
+{% block title %}{{user.pseudo}}{% endblock %}
 
 {% block body_back %}
     <h1>User</h1>
