--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -25,7 +25,7 @@
     <!-- Sous-nav (back-office) -->
     {% block subnav %}
         
-        <a href="{{ path('menu') }}"><img class="rounded float-start mh-100 p-3" style="width: 200px; height: 200px;" src="../images/logo.png" alt=""></a>
+        <a href="{{ path('menu') }}"><img class="rounded float-start mh-100 p-3" style="width: 200px; height: 200px;" src="./images/logo.png" alt=""></a>
         <ul class="nav container justify-content-end">
             <li class="nav-item">
                 <a class="nav-link" href="#">Accès ResTokyo</a>
