--- a/templates/establishment/index.html.twig
+++ b/templates/establishment/index.html.twig
@@ -32,7 +32,7 @@
             <tr>
                 <td>{{ establishment.id }}</td>
                 <td><a href="{{ path('back_establishment_show', {'id': establishment.id}) }}">{{ establishment.name }}</a></td>
-                <td><img src="{{ establishment.poster }}" height="40"></td>
+                <td><img src="{{ establishment.picture }}" height="40"></td>
                 <td><a href="{{ path('back_establishment_listByType',{'type': establishment.type}) }}">{{ establishment.type }}</td>
                 <td><a href="{{ path('back_establishment_listByDistrict',{'district': establishment.district.id}) }}">{{ establishment.district.name }}</td>
                 <td>{% for tag in establishment.tags %}
