--- a/templates/establishment/show.html.twig
+++ b/templates/establishment/show.html.twig
@@ -18,7 +18,7 @@
             </tr>
             <tr>
                 <th>Poster</th>
-                <td><img src="{{ establishment.poster }}"></td>
+                <td><img src="{{ establishment.picture }}"></td>
             </tr>
             <tr>
                 <th>Picture</th>
