--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -26,7 +26,7 @@
 {% if is_granted('IS_AUTHENTICATED_FULLY') %}
     <ul class="nav container justify-content-end border-bottom">
         <li class="nav-item">
-            <a class="nav-link" href="#">Accès ResTokyo</a>
+            <a class="nav-link" href="/menu">Accès ResTokyo</a>
         </li>
         <li class="nav-item">
             <span class="nav-link disabled">{{ app.user.pseudo }}</span>
@@ -37,7 +37,7 @@
     </ul>
  
     <div class="text-center">
-    <img class="img-fluid rounded mh-100 p-3" style="width: 400px; height: 300px;" src="../images/logo.png" alt="">
+    <img class="img-fluid rounded mh-100 p-3" style="width: 400px; height: 300px;" src="./images/logo.png" alt="">
     <h2 class="text-color-light">Bonjour {{ app.user.pseudo }}</h2>
     <h3>Bienvenue sur l'interface administrateur de ResTokyo</h3>
     </div>
@@ -45,7 +45,7 @@
 <div class="row row-cols-1 row-cols-md-3 g-4">
     <div class="col-sm-4">
         <div class="card h-100">
-            <img src="../images/district.jpg" class="card-img-top" alt="...">
+            <img src="./images/district.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Les Quartiers</h5>
                 <p class="card-text">Interface de gestion des quatriers.</p>
@@ -57,7 +57,7 @@
     </div>
     <div class="col-sm-4">
         <div class="card h-100">
-            <img src="../images/restaurant.jpg" class="card-img-top" alt="...">
+            <img src="./images/restaurant.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Etablissements</h5>
                 <p class="card-text">Interface de gestion des établissements.</p>
@@ -70,7 +70,7 @@
     </div>
     <div class="col-sm-4">
         <div class="card h-100">
-            <img src="../images/user.jpg" class="card-img-top" alt="...">
+            <img src="./images/user.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Utilisateurs</h5>
                 <p class="card-text">Interface de gestion des utilisateurs.</p>
