--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -26,7 +26,7 @@
 {% if is_granted('IS_AUTHENTICATED_FULLY') %}
     <ul class="nav container justify-content-end border-bottom">
         <li class="nav-item">
-            <a class="nav-link" href="/menu">Accès ResTokyo</a>
+            <a class="nav-link" href="http://localhost:8080/">Accès ResTokyo</a>
         </li>
         <li class="nav-item">
             <span class="nav-link disabled">{{ app.user.pseudo }}</span>
