--- a/templates/district/edit.html.twig
+++ b/templates/district/edit.html.twig
@@ -3,11 +3,11 @@
 {% block title %}Edit District{% endblock %}
 
 {% block body_back %}
-    <h1>Edit District</h1>
+    <h1>Modifier un district</h1>
 
     {{ include('district/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('back_district_index') }}" class="btn btn-primary">back to list</a>
+    <a href="{{ path('back_district_index') }}" class="btn btn-info">Retour à la liste des districts</a>
 
     {{ include('district/_delete_form.html.twig') }}
 {% endblock %}
