--- a/templates/establishment/edit.html.twig
+++ b/templates/establishment/edit.html.twig
@@ -3,11 +3,12 @@
 {% block title %}Edit establishment{% endblock %}
 
 {% block body_back %}
-    <h1>Edit establishment</h1>
+    <h1>Modifier un établissement</h1>
 
     {{ include('establishment/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('back_establishment_index') }}" class="btn btn-primary">Retour à la liste</a>
+    <a href="{{ path('back_establishment_index') }}" class="btn btn-info">Retour à la liste des établissements</a>
+    
 
-    {{ include('back/establishment/_delete_form.html.twig') }}
+    {# {{ include('establishment/_delete_form.html.twig') }} #}
 {% endblock %}
