--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -3,11 +3,11 @@
 {% block title %}Edit User{% endblock %}
 
 {% block body_back %}
-    <h1>Edit User</h1>
+    <h1>Modifier un utilisateur</h1>
 
     {{ include('user/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('back_user_index') }}">back to list</a>
+    <a href="{{ path('back_user_index') }}" class="btn btn-info">Retour à la liste des utilisateurs</a>
 
     {{ include('user/_delete_form.html.twig') }}
 {% endblock %}
