modification anglais->francais

--- a/templates/establishment/index.html.twig
+++ b/templates/establishment/index.html.twig
@@ -9,9 +9,6 @@
     <a href="{{ path('back_establishment_new') }}" class="btn btn-warning mb-2">Ajouter un établissement</a>
     <a href="{{ path('back_establishment_listByStatus',{'status': 0}) }}" class="btn btn-warning mb-2">Liste des établissements à valider</a>
 
-
-    {# {{ include('_flash_messages.html.twig') }} #}
-
     <table class="table table-striped table-hover">
         <thead>
             <tr>
@@ -41,8 +38,8 @@
                 <td>{{ establishment.rating }}</td>
                 <td><a href="{{ path('back_establishment_listByStatus',{'status': establishment.status}) }}">{{ establishment.status }}</td>
                 <td>
-                    <a href="{{ path('back_establishment_show', {'id': establishment.id}) }}" class="btn btn-sm btn-primary">show</a>
-                    <a href="{{ path('back_establishment_edit', {'id': establishment.id}) }}" class="btn btn-sm btn-success">edit</a>
+                    <a href="{{ path('back_establishment_show', {'id': establishment.id}) }}" class="btn btn-sm btn-primary">Détails</a>
+                    <a href="{{ path('back_establishment_edit', {'id': establishment.id}) }}" class="btn btn-sm btn-success">Modifier</a>
                 </td>
             </tr>
         {% else %}
