--- a/templates/district/index.html.twig
+++ b/templates/district/index.html.twig
@@ -8,8 +8,6 @@
 
     <a href="{{ path('back_district_new') }}" class="btn btn-warning mb-2">Ajouter un district</a>
 
-    {# {{ include('_flash_messages.html.twig') }} #}
-
     <table class="table table-striped table-hover">
         <thead>
             <tr>
@@ -24,8 +22,8 @@
                 <td>{{ district.id }}</td>
                 <td><a href="{{ path('back_district_show', {'id': district.id}) }}">{{ district.name }}</a></td>
                 <td>
-                    <a href="{{ path('back_district_show', {'id': district.id}) }}" class="btn btn-sm btn-primary">show</a>
-                    <a href="{{ path('back_district_edit', {'id': district.id}) }}" class="btn btn-sm btn-success">edit</a>
+                    <a href="{{ path('back_district_show', {'id': district.id}) }}" class="btn btn-sm btn-primary">Détails</a>
+                    <a href="{{ path('back_district_edit', {'id': district.id}) }}" class="btn btn-sm btn-success">Modifier</a>
                 </td>
             </tr>
         {% else %}
