--- a/templates/district/show.html.twig
+++ b/templates/district/show.html.twig
@@ -18,9 +18,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('back_district_index') }}" class="btn btn-info">back to list</a>
+    <a href="{{ path('back_district_index') }}" class="btn btn-info">Retour à la liste des districts</a>
     
-    <a href="{{ path('back_district_edit', {'id': district.id}) }}" class="btn btn-success">edit</a>
+    <a href="{{ path('back_district_edit', {'id': district.id}) }}" class="btn btn-success">Modifier</a>
 
     {{ include('district/_delete_form.html.twig') }}
 
