--- a/templates/establishment/show.html.twig
+++ b/templates/establishment/show.html.twig
@@ -80,9 +80,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('back_establishment_index') }}" class="btn btn-info">back to list</a>
+    <a href="{{ path('back_establishment_index') }}" class="btn btn-info">Retour à la liste des établissements</a>
     
-    <a href="{{ path('back_establishment_edit', {'id': establishment.id}) }}" class="btn btn-success">edit</a>
+    <a href="{{ path('back_establishment_edit', {'id': establishment.id}) }}" class="btn btn-success">Modifier</a>
 
     {{ include('establishment/_delete_form.html.twig') }}
 
