--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -3,11 +3,9 @@
 {% block title %}User index{% endblock %}
 
 {% block body_back %}
-    <h1>User index</h1>
+    <h1>Index des utilisateurs</h1>
 
     <a class="btn btn-warning mb-2" href="{{ path('back_user_new') }}">Ajouter un utilisateur</a>
-
-    {# {{ include('_flash_messages.html.twig') }} #}
     
     <table class="table table-striped table-hover">
         <thead>
@@ -15,7 +13,7 @@
                 <th>Id</th>
                 <th>Email</th>
                 <th>Roles</th>
-                <th>actions</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
@@ -25,8 +23,8 @@
                 <td><a href="{{ path('back_user_show', {'id': user.id}) }}">{{ user.email }}</a></td>
                 <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
                 <td>
-                    <a class="btn btn-primary btn-sm" href="{{ path('back_user_show', {'id': user.id}) }}">show</a>
-                    <a class="btn btn-success btn-sm" href="{{ path('back_user_edit', {'id': user.id}) }}">edit</a>
+                    <a class="btn btn-primary btn-sm" href="{{ path('back_user_show', {'id': user.id}) }}">Détails</a>
+                    <a class="btn btn-success btn-sm" href="{{ path('back_user_edit', {'id': user.id}) }}">Modifier</a>
                 </td>
             </tr>
         {% else %}
