--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -23,9 +23,9 @@
     </table>
 
     
-    <a class="btn btn-info btn-m" href="{{ path('back_user_index') }}">back to list</a>
+    <a class="btn btn-info btn-m" href="{{ path('back_user_index') }}">Retour à la liste des utilisateurs</a>
 
-    <a class="btn btn-success btn-m" href="{{ path('back_user_edit', {'id': user.id}) }}">edit</a>   
+    <a class="btn btn-success btn-m" href="{{ path('back_user_edit', {'id': user.id}) }}">Modifier</a>   
 
     {{ include('user/_delete_form.html.twig') }}
     
