modification anglais->francais

--- a/templates/district/new.html.twig
+++ b/templates/district/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New District{% endblock %}
+{% block title %}Ajout d'un district{% endblock %}
 
 {% block body_back %}
     <h1>Créer un nouveau district</h1>
