--- a/templates/establishment/new.html.twig
+++ b/templates/establishment/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Establishment{% endblock %}
+{% block title %}Ajout établissement{% endblock %}
 
 {% block body_back %}
     <h1>Ajouter un nouvel établissement</h1>
