--- a/templates/establishment/show.html.twig
+++ b/templates/establishment/show.html.twig
@@ -44,6 +44,10 @@
                 <td>{{ establishment.description }}</td>
             </tr>
             <tr>
+                <th>Adresse</th>
+                <td>{{ establishment.address }}</td>
+            </tr>
+            <tr>
                 <th>Site web</th>
                 <td>{{ establishment.website }}</td>
             </tr>
