--- a/templates/district/edit.html.twig
+++ b/templates/district/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit District{% endblock %}
+{% block title %}Modifier un district{% endblock %}
 
 {% block body_back %}
     <h1>Modifier un district</h1>
