--- a/templates/establishment/edit.html.twig
+++ b/templates/establishment/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit establishment{% endblock %}
+{% block title %}Modifier un établissement{% endblock %}
 
 {% block body_back %}
     <h1>Modifier un établissement</h1>
