--- a/templates/establishment/edit.html.twig
+++ b/templates/establishment/edit.html.twig
@@ -5,7 +5,7 @@
 {% block body_back %}
     <h1>Modifier un établissement</h1>
 
-    {{ include('establishment/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('establishment/_form.html.twig', {'button_label': 'Mise à jour'}) }}
 
     <a href="{{ path('back_establishment_index') }}" class="btn btn-info">Retour à la liste des établissements</a>
     
