--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -47,8 +47,8 @@
         <div class="card h-100">
             <img src="./images/district.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-                <h5 class="card-title">Les Quartiers</h5>
-                <p class="card-text">Interface de gestion des quatriers.</p>
+                <h5 class="card-title">Les quartiers</h5>
+                <p class="card-text">Interface de gestion des quartiers.</p>
             </div>
             <div class="card-footer">
                 <a href="{{ path('back_district_index') }}" class="btn btn-primary">Visualiser</a>
