--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -5,7 +5,7 @@
 {% block body_back %}
     <h1>Modifier un utilisateur</h1>
 
-    {{ include('user/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('user/_form.html.twig', {'button_label': 'Mise à jour'}) }}
 
     <a href="{{ path('back_user_index') }}" class="btn btn-info">Retour à la liste des utilisateurs</a>
 
