--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,8 @@
 
     <!-- Our custom CSS -->
     <link rel="stylesheet" href="{{ asset('html-css/style.css') }}">
+    <!-- CSS custor for project ResTokyo -->
+    <link rel="stylesheet" href="{{ asset('html-css/restokyo.css') }}">
     <!-- favicon -->
     <link rel="shortcut icon" href="{{ asset('favicon.png') }}" type="image/x-icon">
 
@@ -35,7 +37,7 @@
                 <a class="nav-link" href="/quartiers">Quartiers</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/etablissement">Restaurants et Isakaya</a>
+                <a class="nav-link" href="/etablissement">Restaurants et Izakaya</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/user">Utilisateurs</a>
