--- a/templates/district/index.html.twig
+++ b/templates/district/index.html.twig
@@ -1,19 +1,20 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Liste des districts{% endblock %}
+{% block title %}Liste des quartiers{% endblock %}
 
 {% block body_back %}
 
-    <h1>Liste des districts</h1>
+    <h1>Liste des quartiers</h1>
 
-    <a href="{{ path('back_district_new') }}" class="btn btn-warning mb-2">Ajouter un district</a>
+    <a href="{{ path('back_district_new') }}" class="btn btn-warning mb-2">Ajouter un quartier</a>
 
     <table class="table table-striped table-hover">
         <thead>
             <tr>
                 <th>Id</th>
                 <th>Nom</th>
-                <th>actions</th>
+                <th>Kanji</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
@@ -21,6 +22,7 @@
             <tr>
                 <td>{{ district.id }}</td>
                 <td><a href="{{ path('back_district_show', {'id': district.id}) }}">{{ district.name }}</a></td>
+                <td><a href="{{ path('back_district_show', {'id': district.id}) }}">{{ district.kanji }}</a></td>
                 <td>
                     <a href="{{ path('back_district_show', {'id': district.id}) }}" class="btn btn-sm btn-primary">Détails</a>
                     <a href="{{ path('back_district_edit', {'id': district.id}) }}" class="btn btn-sm btn-success">Modifier</a>
