DONE TagController and fix translation in twig

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -40,6 +40,9 @@
                 <a class="nav-link" href="/etablissement">Restaurants et Izakaya</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="/specialites">Spécialités</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="/user">Utilisateurs</a>
             </li>
             {% if is_granted('IS_AUTHENTICATED_FULLY') %}
