--- a/public/html-css/restokyo.css
+++ b/public/html-css/restokyo.css
@@ -1,5 +1,12 @@
+img.menu__user-picture {
+    width: 15.5em;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 img.picture__show-establishement {
     max-width: 25em;
     max-height: 40em;
 }
+
