FIX documentation and update menu

--- a/templates/establishment/show.html.twig
+++ b/templates/establishment/show.html.twig
@@ -53,7 +53,7 @@
             </tr>
             <tr>
                 <th>Téléphone</th>
-                <td>{{ establishment.phone }}</td>
+                <td>+{{ establishment.phone }}</td>
             </tr>
             <tr>
                 <th>Prix</th>
