--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -37,13 +37,13 @@
                 <a class="nav-link" href="/quartiers">Quartiers</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/etablissement">Restaurants et Izakaya</a>
+                <a class="nav-link" href="/etablissements">Restaurants et Izakaya</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/specialites">Spécialités</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/user">Utilisateurs</a>
+                <a class="nav-link" href="/profils">Utilisateurs</a>
             </li>
             {% if is_granted('IS_AUTHENTICATED_FULLY') %}
             {% if is_granted('ROLE_ADMIN') %}
