--- a/templates/user/new.html.twig
+++ b/templates/user/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New User{% endblock %}
+{% block title %}Ajouter un utilisateur{% endblock %}
 
 {% block body_back %}
     <h1>Ajouter un utilisateur</h1>
