logout nav bar ok

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -52,9 +52,8 @@
                 </li>
             {% endif %}
             <li class="nav-item">
-                <a class="nav-link" href="/logout">Déconnexion</a>
-            </li>
-        
+                <a class="nav-link" href="{{ path('logout') }}">Déconnexion</a>
+            </li>        
         {% endif %}
         </ul>
         </nav>
